force-app/main/default/objects/DevOps_Deployment__c/DevOps_Deployment__c.object-meta.xml
<CustomObject>
    <description>One deployment of a feature into one Salesforce environment.</description>
    <label>DevOps Deployment</label>
    <nameField>
        <displayFormat>DEP-{00000}</displayFormat>
        <label>Deployment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <pluralLabel>DevOps Deployments</pluralLabel>
</CustomObject>