force-app/main/default/objects/DevOps_Deployment__c/fields/Components_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Components_Deployed__c</fullName>
    <label>Components Deployed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>