force-app/main/default/objects/DevOps_Deployment__c/fields/Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Error_Details__c</fullName>
    <label>Error Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>