force-app/main/default/objects/DevOps_Deployment__c/fields/Pipeline_Run__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Run__c</fullName>
    <label>Pipeline Run</label>
    <referenceTo>DevOps_Pipeline_Run__c</referenceTo>
    <relationshipLabel>Deployments</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>