force-app/main/default/objects/DevOps_Deployment__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Requested Deployments</relationshipLabel>
    <relationshipName>Requested_Deployments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>