force-app/main/default/objects/DevOps_Deployment__c/fields/Test_Results__c.field-meta.xml
<CustomField>
    <fullName>Test_Results__c</fullName>
    <label>Test Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>